fix nowrap in labels

--- a/src/style.css
+++ b/src/style.css
@@ -702,6 +702,7 @@ a {
     border-radius: 10px;
     font-size: 1rem;
     width: fit-content;
+    white-space: nowrap;
     overflow: hidden;
 }
 
